tests/ui-rustc-1-95/g-route-roll-before-resolve.stderr
error[E0599]: no method named `resolve` found for struct `Program<Roll<Route<hibana::g::Send<0, 1, Msg<10, ()>>, hibana::g::Send<0, 1, Msg<20, ()>>>>>` in the current scope
 --> tests/ui-rustc-1-95/g-route-roll-before-resolve.rs:9:42
  |
9 |     let _ = g::route(left, right).roll().resolve::<ROUTE_DECISION>();
  |                                          ^^^^^^^ method not found in `Program<Roll<Route<hibana::g::Send<0, 1, Msg<10, ()>>, hibana::g::Send<0, 1, Msg<20, ()>>>>>`
  |
  = note: the method was found for
          - `Program<Route<LeftSteps, RightSteps>>`
